[package]
name = "fizzbuzz"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fizzbuzz"
path = "src/main.rs"

[lib]
name = "fizzbuzzlib"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
num-traits = "0.2.15"
